syntax = "proto3";

package inet256.inet256d;

option go_package = "github.com/inet256/inet256/pkg/inet256d";

import "google/protobuf/empty.proto";

message Status {
    bytes local_addr = 1;
    repeated string transport_addrs = 2;
    repeated PeerStatus peer_status = 3;
    repeated bytes running_nodes = 4;
}

message PeerStatus {
    bytes addr = 1;
    map<string, int64> last_seen = 2;
}

service Admin {
    rpc GetStatus(google.protobuf.Empty) returns (Status) {}
}
